--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "mint-ui": "^2.2.13",
+    "qrcode": "^1.4.4",
+    "swiper": "^6.1.1",
+    "vant": "^2.10.0",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0",
+    "vue-touch-hotfix": "^2.0.0-beta.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
